jest-failure.log

> react-typescript-electron-base@1.0.0 test
> jest --runInBand

FAIL src/App.test.tsx
  ● Test suite failed to run

    Jest encountered an unexpected token

    Jest failed to parse a file. This happens e.g. when your code or its dependencies use non-standard JavaScript syntax, or when Jest is not configured to support such syntax.

    Out of the box Jest supports Babel, which will be used to transform your files into valid JS based on your Babel configuration.

    By default "node_modules" folder is ignored by transformers.

    Here's what you can do:
     • If you are trying to use ECMAScript Modules, see https://jestjs.io/docs/ecmascript-modules for how to enable it.
     • If you are trying to use TypeScript, see https://jestjs.io/docs/getting-started#using-typescript
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation, specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/configuration
    For information about custom transformations, see:
    https://jestjs.io/docs/code-transformation

    Details:

    /home/runner/work/react-typescript-electron-base/react-typescript-electron-base/src/App.css:1
    .app-shell {
    ^

    SyntaxError: Unexpected token '.'

    [0m[31m[1m>[22m[39m[90m 1 |[39m [36mimport[39m [32m'./App.css'[39m[33m;[39m
     [90m   |[39m [31m[1m^[22m[39m
     [90m 2 |[39m
     [90m 3 |[39m [36mconst[39m stack [33m=[39m [[32m'React 19'[39m[33m,[39m [32m'TypeScript 7'[39m[33m,[39m [32m'Vite 8'[39m[33m,[39m [32m'Electron 43'[39m][33m;[39m
     [90m 4 |[39m[0m

      at ModuleExecutor.compile (node_modules/jest-runtime/build/index.js:2104:44)
      at Object.<anonymous> (src/App.tsx:1:1)
      at Object.<anonymous> (src/App.test.tsx:3:1)

PASS tests/preload.test.ts
PASS tests/window-options.test.ts

Test Suites: 1 failed, 2 passed, 3 total
Tests:       2 passed, 2 total
Snapshots:   0 total
Time:        1.162 s
Ran all test suites.
